// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="LabelContainer-eoxl68-0 hGsRhs"
  >
    Medium
  </span>
  <span
    className="LabelContainer-eoxl68-0 iSWZMy"
    color="piccolo.100"
  >
    Medium
  </span>
  <span
    className="LabelContainer-eoxl68-0 joHEZD"
    color="goten.100"
  >
    Medium
  </span>
</div>
`;

exports[`Label renders with different Sizes 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="LabelContainer-eoxl68-0 cVZzBG"
    size="small"
  >
    Small
  </span>
  <span
    className="LabelContainer-eoxl68-0 hGsRhs"
  >
    Medium
  </span>
</div>
`;

exports[`Label renders with different SizesList 1`] = `
<div
  className="flex flex-col justify-around items-center w-full"
>
  <div
    className="flex justify-around items-center w-full mb-4"
  >
    <span
      className="LabelContainer-eoxl68-0 cVZzBG"
      size="small"
    >
      Small
    </span>
    <span
      className="LabelContainer-eoxl68-0 cVZzBG"
      size="small"
    >
      <span
        className="Label__IconLeftWrapper-sc-1s4qwei-1 pYIWj"
      >
        <svg
          className="sc-jLFzpH"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Small
    </span>
    <span
      className="LabelContainer-eoxl68-0 cVZzBG"
      size="small"
    >
      Small
      <span
        className="Label__IconRightWrapper-sc-1s4qwei-0 hIUcrO"
      >
        <svg
          className="sc-jnCuNW"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="LabelContainer-eoxl68-0 cVZzBG"
      size="small"
    >
      <span
        className="Label__IconLeftWrapper-sc-1s4qwei-1 pYIWj"
      >
        <svg
          className="sc-jLFzpH"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Small
      <span
        className="Label__IconRightWrapper-sc-1s4qwei-0 hIUcrO"
      >
        <svg
          className="sc-jnCuNW"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="flex justify-around items-center w-full"
  >
    <span
      className="LabelContainer-eoxl68-0 hGsRhs"
    >
      Medium
    </span>
    <span
      className="LabelContainer-eoxl68-0 hGsRhs"
    >
      <span
        className="Label__IconLeftWrapper-sc-1s4qwei-1 pYIWj"
      >
        <svg
          className="sc-jLFzpH"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Medium
    </span>
    <span
      className="LabelContainer-eoxl68-0 hGsRhs"
    >
      Medium
      <span
        className="Label__IconRightWrapper-sc-1s4qwei-0 hIUcrO"
      >
        <svg
          className="sc-jnCuNW"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="LabelContainer-eoxl68-0 hGsRhs"
    >
      <span
        className="Label__IconLeftWrapper-sc-1s4qwei-1 pYIWj"
      >
        <svg
          className="sc-jLFzpH"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Medium
      <span
        className="Label__IconRightWrapper-sc-1s4qwei-0 hIUcrO"
      >
        <svg
          className="sc-jnCuNW"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
